--- a/css/app.css
+++ b/css/app.css
@@ -51,10 +51,17 @@ h2 {
     text-shadow: 0 0 5px #01579b;
 }
 
-#florida {
+#South Afirca {
     background-color: #03a9f4;
 }
 
-#paris {
+#Kenya {
+    background-color: #d32f2f;
+}
+#Ghana {
+    background-color: #03a9f4;
+}
+
+#Nigeria {
     background-color: #d32f2f;
 }
